static/css: Fix line spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,9 @@ body {
 .menu, .article-meta, footer { text-align: center; }
 .title { font-size: 1.1em; }
 footer a { text-decoration: none; }
+h1 {
+  line-height: 1.2em;
+}
 hr {
   border-style: dashed;
   color: #ddd;
